# ChatBot

./: .replit  README.md  app.py  chatbot.db  cli_chatbot.py  models.py  pyproject.toml  replit.md
blueprints/: auth.py  chat.py
templates/: base.html  chat.html  chat_history.html  index.html  preferences.html
templates/auth/: login.html  register.html
